User-Service: Adjust service layer.